# mos

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
mos/: audiodataset.py  dataset.py  datasetv2.py  eval.py  log.py  loss.py  models.py  run.py  train.py  utils.py
tests/: conftest.py  test_dataset.py  test_shape.py
