[project]
name = "MOS"
version = "0.0.1"
description = "Implementation of MOS"
readme = "README.md"
requires-python ="~=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Simon Sondén"},
]
dependencies = ["jax>=0.4.11", "jaxtyping>=0.2.20", "equinox>=0.10.5", "typing_extensions>=4.5.0", "jax-tqdm>=0.1.1", "pandas>=2.1.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["mos/*"]

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=mos,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"

[tool.ruff]
select = ["E", "F", "I", "W", "C90", "N", "D"]
extend-include = ["*.ipynb"]
line-length = 115
fixable = ["ALL"]
ignore = [
          "E731", # Allow named lambdas
          "F722", # jax-typing
          "D104",  # Missing docstring in public package
          ]
ignore-init-module-imports = true

[tool.ruff.isort]
combine-as-imports = true
lines-after-imports = 2
extra-standard-library = ["typing_extensions"]
order-by-type = false

[tool.ruff.pydocstyle]
convention = "google"

[tool.pyright]
reportIncompatibleMethodOverride = true
include = ["mos"]

[tool.black]
line-length = 115
